<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/b"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".MenuMainActivity" >

    <TextView
        android:id="@+id/textView"
        android:layout_width="411dp"
        android:layout_height="73dp"
        android:layout_marginTop="84dp"
        android:background="#000000"
        android:text="@string/judul"
        android:textAlignment="center"
        android:textColor="#D88D1E"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="332dp"
        android:layout_height="48dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="#000000"
        android:onClick="halamanSatu"
        android:text="@string/volume_balok"
        android:textColor="#D88D1E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button2"
        android:layout_width="339dp"
        android:layout_height="48dp"
        android:layout_marginTop="96dp"
        android:backgroundTint="#000000"
        android:onClick="halamanDua"
        android:text="@string/kalkulator"
        android:textColor="#D88D1E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="414dp"
        android:layout_height="12dp"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="217dp"
        android:background="#000000"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button3"
        android:layout_width="335dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#000000"
        android:onClick="halamanTiga"
        android:text="@string/conv"
        android:textColor="#D88D1E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />
</androidx.constraintlayout.widget.ConstraintLayout>





